# sigcomm26-tutorial-bluefield

./: .gitignore  README.md  benchmark.sh  meson.build  roce_loopback.py  run_client.sh  run_server.sh  send_udp.py  setup_roce_loopback.sh  setup_ttyplot.sh
doca-flow/: doca_flow_ecn.c  doca_flow_mac.c  doca_flow_nop.c  meson.build
doca-flow-ecn/: doca_flow_ecn.c  meson.build
doca-flow-ecn/dependencies/: meson.build
doca-pcc-ecn/: README.md  doca_pcc_findings.md  doca_pcc_guide.md  plot_ecn_sweep.py  pureecn_dcqcn.patch  tune_ecn.py
docs/: Makefile  end-to-end-data-path-pre-pcc-default-cc.dot  end-to-end-data-path-pre-pcc.dot  end-to-end-data-path.dot  pf0-eswitch-pipes.dot
