executable(DOCA_PREFIX + 'flow_nop',
	['doca_flow_nop.c'],
	c_args : base_c_args,
	dependencies : app_dependencies,
	include_directories : app_inc_dirs,
	install: false)

executable(DOCA_PREFIX + 'flow_mac',
	['doca_flow_mac.c'],
	c_args : base_c_args,
	dependencies : app_dependencies,
	include_directories : app_inc_dirs,
	install: false)

executable(DOCA_PREFIX + 'flow_ecn',
	['doca_flow_ecn.c'],
	c_args : base_c_args,
	dependencies : app_dependencies,
	include_directories : app_inc_dirs,
	install: false)
